// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Caption renders 1`] = `
<p
  className="sc-hBYLEG kqamjb"
  color="bulma.100"
  size={16}
>
  Text
</p>
`;

exports[`Caption renders colors 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <p
    className="sc-hBYLEG kqamjb"
    color="bulma.100"
    size={16}
  >
    Default color is Bulma
  </p>
  <p
    className="sc-hBYLEG lfOGQi"
    color="piccolo.100"
    size={16}
  >
    Piccolo
  </p>
  <p
    className="sc-hBYLEG btQKjQ"
    color="trunks.100"
    size={16}
  >
    Trunks
  </p>
  <p
    className="sc-hBYLEG kxbTqC"
    color="krillin.100"
    size={16}
  >
    Krillin
  </p>
</div>
`;

exports[`Caption renders font-weight 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <p
    className="sc-hBYLEG kqamjb"
    color="bulma.100"
    size={16}
  >
    Default font-weight is regular
  </p>
  <p
    className="sc-hBYLEG eJEGjl"
    color="bulma.100"
    size={16}
  >
    Font-weight is bold
  </p>
</div>
`;

exports[`Caption renders line height 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <p
    className="sc-hBYLEG kqamjb"
    color="bulma.100"
    size={16}
  >
    Line-height is pre-calculated
  </p>
  <p
    className="sc-hBYLEG kqamjb"
    color="bulma.100"
    size={16}
  >
    Custon line-height
  </p>
</div>
`;

exports[`Caption renders semantic tags 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <p
    className="sc-hBYLEG kqamjb"
    color="bulma.100"
    size={16}
  >
    Paragraph is a default tag
  </p>
  <span
    className="sc-hBYLEG kqamjb"
    color="bulma.100"
    size={16}
  >
    Span tag
  </span>
  <label
    className="sc-hBYLEG kqamjb"
    color="bulma.100"
    size={16}
  >
    Label tag
  </label>
</div>
`;

exports[`Caption renders sizes 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <p
    className="sc-hBYLEG kqamjb"
    color="bulma.100"
    size={16}
  >
    Default font-size is 16px
  </p>
  <p
    className="sc-hBYLEG hLRFCw"
    color="bulma.100"
    size={24}
  >
    Size is 24px
  </p>
  <p
    className="sc-hBYLEG ddqxXX"
    color="bulma.100"
    size={48}
  >
    Size is 48px
  </p>
</div>
`;

exports[`Caption renders text-align 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <p
    className="sc-hBYLEG kqamjb"
    color="bulma.100"
    size={16}
  >
    Text-align is not specified
  </p>
  <p
    className="sc-hBYLEG dJiNcQ"
    color="bulma.100"
    size={16}
  >
    Centered Text
  </p>
  <p
    className="sc-hBYLEG gzxFhn"
    color="bulma.100"
    size={16}
  >
    Right alignment
  </p>
</div>
`;

exports[`Caption renders underline 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <p
    className="sc-hBYLEG kqamjb"
    color="bulma.100"
    size={16}
  >
    Default text-decoration is none
  </p>
  <p
    className="sc-hBYLEG kqamjb"
    color="bulma.100"
    size={16}
  >
    Underline Text
  </p>
</div>
`;

exports[`Caption renders uppercase 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <p
    className="sc-hBYLEG kqamjb"
    color="bulma.100"
    size={16}
  >
    Default text-transform is none
  </p>
  <p
    className="sc-hBYLEG kqamjb"
    color="bulma.100"
    size={16}
  >
    Uppercase Text
  </p>
</div>
`;
